--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     }
   ],
   "require": {
+    "php": ">=8.0",
     "symfony/http-client": "^5.3",
     "symfony/console": "^5.3",
     "setasign/fpdf": "^1.8",
