--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
     }
   ],
   "require": {
-    "php": ">=8.0",
-    "symfony/http-client": "^5.3",
-    "symfony/console": "^5.3",
+    "php": "^8.0",
+    "symfony/http-client": "^6.0",
+    "symfony/console": "^6.0",
     "tecnickcom/tcpdf": "^6.4"
   },
   "require-dev": {
-    "symfony/var-dumper": "^5.3"
+    "symfony/var-dumper": "^6.0"
   }
 }
